--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="MainItemOne"">
-      <h1 class=" MainItem HeaderOne ItemKeepOne" onclick="expandItem(classStore)">Lorem Ipsum</h1>
+      <h1 class=" MainItem HeaderOne ItemKeepOne" onclick="expandItem(classStore)">Voluenteering</h1>
     <div id="classStore" style="display:none;">MainItemOne</div>
     <p class="MainItem ItemKeepOne">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt nisi et
       nunc
@@ -30,19 +30,10 @@
       dui. Pellentesque nec laoreet augue. Pellentesque elementum quis lorem ut suscipit. Pellentesque habitant morbi
       tristique senectus et netus et malesuada fames ac turpis egestas. Etiam eget lectus laoreet, ultricies tortor non,
       eleifend enim.</p>
-    <p class="ItemKeepOne">Curabitur viverra, est quis tempus molestie, tellus turpis scelerisque orci, sed sagittis
-      enim
-      sem tempor velit. Cras sit amet porta nisl. Suspendisse sit amet velit porttitor, varius dolor in, euismod tortor.
-      Praesent sagittis pharetra eros non ullamcorper. Donec aliquam rhoncus porttitor. Curabitur porta iaculis
-      tincidunt. Proin tortor urna, cursus in pretium et, pulvinar sed justo. Morbi egestas ex velit, nec blandit metus
-      maximus nec. Maecenas lacus lacus, dapibus id augue sed, egestas hendrerit turpis. Morbi commodo, augue in
-      vestibulum sagittis, turpis urna hendrerit augue, at imperdiet justo nisi vitae quam. Nullam vitae posuere tellus.
-      Quisque facilisis mi eget ligula ullamcorper, id ultrices risus varius. Vestibulum ut rhoncus sem, nec cursus sem.
-      Duis nec dui eros.</p>
   </div>
 
   <div class="MainItemTwo"">
-      <h1 class=" MainItem HeaderTwo ItemKeepTwo" onclick="expandItem(classStore2)">Lorem Ipsum</h1>
+      <h1 class=" MainItem HeaderTwo ItemKeepTwo" onclick="expandItem(classStore2)">Friday Clubs</h1>
     <div id="classStore2" style="display:none;">MainItemTwo</div>
     <p class="MainItem ItemKeepTwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt nisi et
       nunc
