--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <title>Harington Mobile UI</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
   <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
-  <div class="TopBar">
+<div class="TopBar">
     <a class="MenuItem menuKept" id="Active User">No Current User</a>
     <a class="LoginMenu menuKept" onClick="expandMenu()"><img class="menuKept" src="MenuIcon.png" alt="Menu" width="50"
         height="50" </a>
@@ -19,41 +19,12 @@
         <li class="menuKept"><a href="logout">Log out</a></li>
       </ul>
   </div>
-
-  <div class="MainItemOne"">
-      <h1 class=" MainItem HeaderOne ItemKeepOne" onclick="expandItem(classStore)">Voluenteering</h1>
-    <div id="classStore" style="display:none;">MainItemOne</div>
-    <p class="MainItem ItemKeepOne">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt nisi et
-      nunc
-      pretium, a
-      commodo erat pharetra. Nullam orci urna, cursus quis tellus vel, bibendum bibendum lectus. Phasellus et volutpat
-      dui. Pellentesque nec laoreet augue. Pellentesque elementum quis lorem ut suscipit. Pellentesque habitant morbi
-      tristique senectus et netus et malesuada fames ac turpis egestas. Etiam eget lectus laoreet, ultricies tortor non,
-      eleifend enim.</p>
+  
+  <div class="MainItemOne">
+    <a class="HeaderOne" href="selection.html">
+      Selection Screen
+    </a>
   </div>
-
-  <div class="MainItemTwo"">
-      <h1 class=" MainItem HeaderTwo ItemKeepTwo" onclick="expandItem(classStore2)">Friday Clubs</h1>
-    <div id="classStore2" style="display:none;">MainItemTwo</div>
-    <p class="MainItem ItemKeepTwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt nisi et
-      nunc
-      pretium, a
-      commodo erat pharetra. Nullam orci urna, cursus quis tellus vel, bibendum bibendum lectus. Phasellus et volutpat
-      dui. Pellentesque nec laoreet augue. Pellentesque elementum quis lorem ut suscipit. Pellentesque habitant morbi
-      tristique senectus et netus et malesuada fames ac turpis egestas. Etiam eget lectus laoreet, ultricies tortor non,
-      eleifend enim.</p>
-    <p class="ItemKeepTwo">Curabitur viverra, est quis tempus molestie, tellus turpis scelerisque orci, sed sagittis
-      enim
-      sem tempor velit. Cras sit amet porta nisl. Suspendisse sit amet velit porttitor, varius dolor in, euismod tortor.
-      Praesent sagittis pharetra eros non ullamcorper. Donec aliquam rhoncus porttitor. Curabitur porta iaculis
-      tincidunt. Proin tortor urna, cursus in pretium et, pulvinar sed justo. Morbi egestas ex velit, nec blandit metus
-      maximus nec. Maecenas lacus lacus, dapibus id augue sed, egestas hendrerit turpis. Morbi commodo, augue in
-      vestibulum sagittis, turpis urna hendrerit augue, at imperdiet justo nisi vitae quam. Nullam vitae posuere tellus.
-      Quisque facilisis mi eget ligula ullamcorper, id ultrices risus varius. Vestibulum ut rhoncus sem, nec cursus sem.
-      Duis nec dui eros.</p>
-  </div>
-
-
 </body>
 
 </html>
