--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-<div class="TopBar">
+
+  <div class="TopBar">
     <a class="MenuItem menuKept" id="Active User">No Current User</a>
     <a class="LoginMenu menuKept" onClick="expandMenu()"><img class="menuKept" src="MenuIcon.png" alt="Menu" width="50"
         height="50" </a>
@@ -19,11 +20,14 @@
         <li class="menuKept"><a href="logout">Log out</a></li>
       </ul>
   </div>
-  
+
   <div class="MainItemOne">
-    <a class="HeaderOne" href="selection.html">
-      Selection Screen
-    </a>
+    <h1 class="MainItem HeaderOne SelectionHref">
+      Selection
+    </h1>
+    <p class="MainItem centered">
+      Pick Your Choises
+    </p>
   </div>
 </body>
 
